Modularize `core`, remove redundant junit jupiter mocking extension